# poc_certification

./: .gitignore  README.md  backend-uv.sh  docker-compose.yml  evaluation_results.json  hello.py  kb_rag_evaluation_results.csv  kb_sop_returns_testset.csv  kb_sop_returns_testset.json  plan.md  pyproject.toml  rough_questions.md  run-all.sh  run_backend.sh  run_backend_uv.sh  run_frontend_uv.sh  submission.md
backend/: Dockerfile  README.md  data_generator.py  data_processing.py  evaluate_kb_rag.py  evaluation.py  generate_kb_testset.py  main.py  pyproject.toml  requirements.txt  test_agent.py  test_data.py  test_tools.py  tools.py
backend/app/: __init__.py  agent.py  models.py  tool_logger.py  tool_usage.py  tools.py
backend/backend/data/: inventory.csv  order_items.csv  orders.csv  products.csv
backend/data/: inventory.csv  order_items.csv  orders.csv  products.csv
backend/generated_testsets/: testset_kg_sop_product_returns.csv
backend/knowledge_base/: Guide_Improving_LTV.txt  Playbook_Flash_Sales_Strategy.txt  Policy_Customer_Discounts.txt  Policy_Shipping_Options.txt  SOP_Inventory_Restock.txt  guide_marketing_campaign_checklist.txt  policy_employee_discounts.txt  rag_questions.md  sop_product_returns.txt
backend/qdrant_db/: meta.json
backend/qdrant_db/collection/internal_docs/: storage.sqlite
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.old.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  ClientChatWrapper.tsx  DebugView.tsx
generated_testsets/: testset_kg_knowledge_base.csv
ragas_evaluation_results/: ragas_eval_testset_kg_knowledge_base.csv  ragas_eval_testset_kg_knowledge_base.json  ragas_eval_testset_kg_policy_employee_discounts.csv  ragas_eval_testset_kg_policy_employee_discounts.json  ragas_eval_testset_policy_employee_discounts.csv  ragas_eval_testset_sop_product_returns.csv
shopify-coo-chat/app/: globals.css  layout.tsx  page.tsx
shopify-coo-chat/app/api/chat/: route.ts
