[project]
name = "poc-certification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.17"
langchain-anthropic = "^0.1.17"
langgraph = "^0.1.5"
qdrant-client = "^1.10.0"
# sentence-transformers = "^3.0.1" # Temporarily remove, let langchain-huggingface handle it
langchain-huggingface = "^0.0.3"  # Add the new package

[tool.poetry.group.dev.dependencies]
